user-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vue-user
  name: vue-user
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vue-user
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: vue-user
    spec:
      containers:
      - args: ["/sh/init_openresty.sh"]
        image: xjyplayer/simple_user_nginx:1.0.2
        imagePullPolicy: IfNotPresent
        name: user-nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /apps/vue_user_pro
          subPath: vue_user_pro
          name: vue-user-pvc
        - mountPath: /apps/logs
          subPath: logs
          name: vue-user-pvc
        - mountPath: /apps/simple-user-nginx
          subPath: simple-user-nginx
          name: vue-user-pvc
        - mountPath: /usr/local/openresty/nginx/conf/nginx_template.conf
          subPath: conf/nginx/nginx.conf
          name: nginx-conf
        workingDir: /apps/simple-user-nginx
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: vue-user-pvc
        persistentVolumeClaim:
          claimName: app-pvc-claim
      - name: nginx-conf
        configMap:
          name: user-nginx-config-map
          items:
          - key: nginx.conf
            path: conf/nginx/nginx.conf
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vue-user
  name: vue-user-server
spec:
  ports:
  - name: vue-user-server-main-port
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: vue-user
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vue-user-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: user.52db.club
    http:
      paths:
      - backend:
          serviceName: vue-user-server
          servicePort: 80
        path: /
  tls:
   - secretName: user-imroc-io-tls
     hosts:
       - user.52db.club
